# tips-backend

./: docker-compose.yaml  pyproject.toml
api/: architecture.drawio  main.py  migrate_db.py
api/controller/: tips.py
api/core/database/mysql/: database.py
api/core/models/mysql/: models.py
api/core/services/: base_query_service.py
api/domain/repository/: sqlalchemy_tips_repository.py
api/features/tips/: dependencies.py
api/features/tips/data/models/: tables.py  tags.py  tags_relation.py  tips.py
api/features/tips/data/services/: tips.py  tips_query_service_impl.py
api/features/tips/domain/entities/: tips_common_model.py  tips_entity.py  tips_query_model.py
api/features/tips/domain/services/: tips_query_service.py
api/features/tips/domain/usecase/: get_tips.py
api/features/tips/presentaation/controller/: tips.py
api/schemas/: tips.py
